--- a/pom.xml
+++ b/pom.xml
@@ -115,5 +115,48 @@
 				</plugins>
 			</build>
 		</profile>
+        <profile>
+            <id>localhost</id>
+            <build>
+                <finalName>vote</finalName>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-war-plugin</artifactId>
+                        <version>2.1.1</version>
+                        <configuration>
+                            <outputDirectory>webapps</outputDirectory>
+                            <warName>ROOT</warName>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.mortbay.jetty</groupId>
+                        <artifactId>maven-jetty-plugin</artifactId>
+                        <version>6.1.26</version>
+                        <configuration>
+                            <scanIntervalSeconds>10</scanIntervalSeconds>
+                            <contextPath>/</contextPath>
+                            <connectors>
+                                <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+                                    <port>8182</port>
+                                    <maxIdleTime>60000</maxIdleTime>
+                                </connector>
+                            </connectors>
+
+                            <systemProperties>
+                                <systemProperty>
+                                    <name>JETTY_PORT</name>
+                                    <value>8182</value>
+                                </systemProperty>
+                                <systemProperty>
+                                    <name>appid</name>
+                                    <value>gamedev-voter</value>
+                                </systemProperty>
+                            </systemProperties>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
 	</profiles>
 </project>
